--- a/cv/style.css
+++ b/cv/style.css
@@ -32,3 +32,20 @@ k {
 k2 {
     color: orange;
 }
+i {
+    color: orange;
+}
+o {
+    color: orange;
+}
+r {
+    color: orange;
+}
+t {
+    color: orange;
+}
+img {
+    margin-right:1;
+    margin-left: auto;
+    display:block;
+}
