--- a/monkey business/style.css
+++ b/monkey business/style.css
@@ -74,3 +74,36 @@ body {
     border-radius: 10px;
     flex-direction: column;
   }
+
+  .shaun {
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .shauntxt {
+    display: flex;
+    justify-content: center;
+    width: 32%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    position: relative;
+    text-align: center;
+    background-color: rgb(92, 27, 27);
+    border-radius: 10px;
+    flex-direction: column;
+  }
+
+  .shaunjpg img {
+    display: flex;
+    object-fit: cover;
+    width: 90%;
+    justify-content: center;
+  }
+
+  .h1 {
+    text-align: center;
+    background-color: aliceblue;
+  }
