--- a/monkey business/style.css
+++ b/monkey business/style.css
@@ -107,3 +107,60 @@ body {
     text-align: center;
     background-color: aliceblue;
   }
+
+  .mo-list {
+    display: flex;;
+    flex-wrap: wrap;
+    margin: 20%;
+    height: 100px;
+    justify-content: space-between;
+    color: white;
+  }
+
+  .monkey img {
+    display: flex;
+    object-fit: cover;
+    width: 100%;
+    text-align: center;
+    justify-content: start;
+  }
+  
+  .monkey { 
+    display: flex;
+    justify-content: start;
+    width: 30%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 2%;
+    position: relative;
+    text-align: center;
+    background-color: rgb(92, 27, 27);
+    border-radius: 10px;
+    flex-direction: column;
+  }
+  
+  .bank {
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 2%;
+    padding-left: %;
+    padding-right: 1%;
+    position: relative;
+    text-align: center;
+    background-color: rgb(92, 27, 27);
+    border-radius: 10px;
+    flex-direction: column;
+  }
+
+  .pile img {
+    display: flex;
+    object-fit: cover;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+  }
